# opengrep-experiments

./: .gitignore  AGENTS.md  ARCHITECTURE.md  INDEX_SCHEMA.md  LICENSE  README.md  pyproject.toml  scan-trigger.txt
.opengrep-rules/: RULES_GENERATION.md  Sanitizers.md
.opengrep-rules/control-inversion/: python-sink-wsgi-start-response.yml  python-source-wsgi-environ.yml
.opengrep-rules/sinks/: python-parent-class-sql-injection.yml  python-sink-command-injection.yml
.opengrep-rules/sources/: python-parent-class-argparse-source.yml  python-parent-class-flask-source.yml  python-source-sys-v2.yml  python-source-sys.yml
.opengrep-rules/templates/: base_backward.yml.template  base_forward.yml.template  forward_constructor_boundary.yml.template  inheritance_bridge.yml.template
src/benchmark/: BenchmarkTest00001.py  BenchmarkTest00002.py  BenchmarkTest00003.py  BenchmarkTest00004.py  BenchmarkTest00005.py  BenchmarkTest00006.py  BenchmarkTest00007.py  __init__.py  tp-review.md
src/control-inversion/: app.py  gunicorn.py
src/holocron/: __init__.py
src/holocron/cli/: __init__.py  index.py  main.py  probe.py  stitch_findings.py
src/holocron/core/: __init__.py  indexer.py  resolver.py  types.py
src/holocron/probe/: OPENGREP_OPTIONS.md  __init__.py  cwe_patterns.py  inheritance_analyzer.py  opengrep_runner.py  rule_generator.py  stitch_validator.py  template_config.py  template_functions.py  template_loader.py
src/holocron/stitching/: STITCHING_STRATEGIES.md  __init__.py  batch.py  matcher.py  (+2 more)
src/jwk-secrets/: README.md
tools/: semantic-cluster-analysis.py
(+42 files in other folders)
